<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word Guess</string>
    <string name="action_settings">Settings</string>
     <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="word_guess">Word Guess</string>
    <string name="hint">Hint:</string>
    <string name="hintButton">Hint</string>
    <string name="life">Life:</string>
    <string name="_10">10</string>
    <string name="available_life">10</string>
    <string name="large_text">Large Text</string>
    <string name="ok">OK</string>
    <string name="exit">Quit</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    

</resources>
